Update - result added to answers component

--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey - Project - Week 5</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/vite.svg" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <title>Super Villain Survey - Sofias Project - Week 5</title>
+    <meta
+      name="description"
+      content="Every superhero needs their nemesis. What kind of super villain would you be? 🦹" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script
+      type="module"
+      src="/src/main.jsx"></script>
   </body>
 </html>
